[package]
name = "sub-account-store"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { package = "ckb-rocksdb", version = "0.18", default-features = false, features = ["snappy", "march-native"] }
sparse-merkle-tree = "0.6.1"
anyhow = "1"
jsonrpsee = { version = "0.15", features = ["full"] }
tokio = { version = "1.16", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.0", features = ["hex"] }
rayon  = "1.5.1"
clap = { version = "3.2.22", features = ["derive"] } #if use 4.xx, then rustc must > 1.61
futures = "0.3"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
rand = "0.8"
tarpc = { version = "0.31", features = ["full"] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.17"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
blake2b-rs = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.9.0"

[features]
default = ["trie"]
trie = ["sparse-merkle-tree/trie"]

[dev-dependencies]
# for benchmarks
blake2b-rs = "0.2"
tempfile = "3.0"
criterion = "0.4"
rand = "0.8"

# for examples
anyhow = "1"
futures = "0.3"
jsonrpsee = { version = "0.15", features = ["full"] }
tokio = { version = "1.16", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.0", features = ["hex"] }

[[bench]]
name = "bench_main"
harness = false

[[bin]]
name = "rpc_server"
path = "src/bin/rpc_server_multi_tree.rs"
